Akses api untuk mendapatkan info saldo merchant harus mengisi API Key yg valid
